--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,10 @@ server.port=8080
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 # ??????? URL. SQLite? ?? ??? ??? ????.
-spring.datasource.url=jdbc:sqlite:./sqlite.db
+spring.datasource.url=jdbc:sqlite:./americano.db
+
+
+
 
 # ??? ??? ??. ?? ??????? ??? ? ???? "testdb".
 spring.datasource.name=jdbc/sqlite
