--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.datasource.url=jdbc:sqlite:./americano.db
 spring.datasource.name=jdbc/sqlite
 spring.datasource.username=
 spring.datasource.password=
+mybatis.configuration.map-underscore-to-camel-case=true
