--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-	implementation 'org.xerial:sqlite-jdbc:3.34.0'
+	implementation 'org.xerial:sqlite-jdbc:3.39.3.0'
+	implementation 'com.rometools:rome:1.18.0'
+	implementation 'org.jsoup:jsoup:1.15.3'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
