--- a/src/main/resources-release/application.properties
+++ b/src/main/resources-release/application.properties
@@ -25,6 +25,6 @@ logging.level.root=info
 # ????
 spring.profiles.active=release
 # ???? ??
-log.config.path=/Users/devy/logs
+log.config.path=/home/devy/logs
 # ???? ??
 log.config.filename=americano-backend
