--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # ?? ??
 logging.level.root=info
 # ????
-spring.profiles.active=release
+spring.profiles.active=local
 # ???? ??
 log.config.path=/Users/devy/logs
 # ???? ??
