build.gradle, application.properties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,24 +7,18 @@ server.port=8080
 
 
 #####################
-# JDBC Datasource ??
+# JDBC Datasource
 #####################
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.url=jdbc:sqlite:./americano.db
+spring.datasource.url=jdbc:sqlite:americano.db
 spring.datasource.name=jdbc/sqlite
-spring.datasource.username=
-spring.datasource.password=
 mybatis.configuration.map-underscore-to-camel-case=true
 
 
-##########
-# ?? ??
-##########
-# ?? ??
+######
+# Log
+######
 logging.level.root=info
-# ????
 spring.profiles.active=local
-# ???? ??
 log.config.path=/Users/devy/logs
-# ???? ??
 log.config.filename=americano-backend
