--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'devy.americano.backend'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-	implementation 'org.xerial:sqlite-jdbc:3.39.3.0'
+	implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
 	implementation 'com.rometools:rome:1.18.0'
 	implementation 'org.jsoup:jsoup:1.15.3'
 
@@ -36,7 +36,7 @@ dependencies {
 
 tasks {
 	processResources {
-		duplicatesStrategy = org.gradle.api.file.DuplicatesStrategy.INCLUDE
+		duplicatesStrategy = DuplicatesStrategy.INCLUDE
 	}
 }
 
